--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,9 +1,16 @@
-all:book245 book246
+all:book245 book246 book247 book248 book251 book252 
 
+book252:book252.cpp
+	g++ -g -o book252 book252.cpp
+book248:book248.cpp
+	g++ -g -o book248 book248.cpp
+book247:book247.cpp
+	g++ -g -o book247 book247.cpp
 book246:book246.cpp
 	g++ -g -o book246 book246.cpp
 book245:book245.cpp
 	g++ -g -o book245 book245.cpp
 
 clean:
-	rm book245 book246
+	rm book245 book246 book247 book248
+
