--- a/exercise/Makefile
+++ b/exercise/Makefile
@@ -1,8 +1,11 @@
-all: task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6
+all: task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6\
+task16_1
 
 clean:
 	rm task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6
 	
+task16_1:task16_1.cpp
+	g++ -g -o task16_1 task16_1.cpp
 task14_6:task14_6.cpp
 	g++ -g -o task14_6 task14_6.cpp
 task14_5:task14_5.cpp
