--- a/exercise/Makefile
+++ b/exercise/Makefile
@@ -1,9 +1,16 @@
 all: task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6\
-task16_1
+task16_1 task16_2  task16_3   task16_4
 
 clean:
-	rm task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6
+	rm task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6\
+ task16_1 task16_2  task16_3   task16_4
 	
+task16_4:task16_4.cpp
+	g++ -g -o task16_4 task16_4.cpp
+task16_3:task16_3.cpp
+	g++ -g -o task16_3 task16_3.cpp
+task16_2:task16_2.cpp
+	g++ -g -o task16_2 task16_2.cpp
 task16_1:task16_1.cpp
 	g++ -g -o task16_1 task16_1.cpp
 task14_6:task14_6.cpp
