--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,6 +1,12 @@
 all:book245 book246 book247 book248 book251 book252 book253 book254\
-book250 book249
+book250 book249 book255 book258 book259
 
+book259:book259.cpp
+	g++ -g -o book259 book259.cpp
+book258:book258.cpp
+	g++ -g -o book258 book258.cpp
+book255:book255.cpp
+	g++ -g -o book255 book255.cpp
 book249:book249.cpp
 	g++ -g -o book249 book249.cpp
 book250:book250.cpp
