--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,6 +1,15 @@
-all:book245 book246 book247 book248 book251 book252 book253 book254\
-book250 book249 book255 book258 book259 book258_1  book258_2  
+all:book132 book123 book245 book246 book247 book248 book251 book252 book253 book254\
+book250 book249 book255 book258 book259 book258_1  book258_2  book259_1\
+book261
 
+book132:book132.c
+	g++ -g -o book132 book132.c 
+book123:book123.c
+	g++ -g -o book123 book123.c 
+book261:book261.cpp
+	g++ -g -o book261 book261.cpp -lpthread
+book259_1:book259_1.cpp
+	g++ -g -o book259_1 book259_1.cpp
 book258_2:book258_2.cpp
 	g++ -g -o book258_2 book258_2.cpp
 book259:book259.cpp
