--- a/exercise/Makefile
+++ b/exercise/Makefile
@@ -1,10 +1,12 @@
 all: task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6\
-task16_1 task16_2  task16_3   task16_4
+task16_1 task16_2 task16_3 task16_4 file1
 
 clean:
 	rm task14_1 task14_2 test task14_3 task14_4 task14_5 task14_6\
- task16_1 task16_2  task16_3   task16_4
-	
+ task16_1 task16_2 task16_3 task16_4 file1.c
+
+file1:file1.c
+	gcc -g -o file1 file1.c
 task16_4:task16_4.cpp
 	g++ -g -o task16_4 task16_4.cpp
 task16_3:task16_3.cpp
